--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,13 @@
 <form method="POST">
-    <div>
+    <div id="pseudo">
         <label for="pseudo">Pseudo :</label>
         <input type="text" id="pseudo" name="user_pseudo">
     </div>
-    <div>
+    <div id="email">
         <label for="mail">e-mail :</label>
         <input type="email" id="mail" name="user_mail">
     </div>
-    <div>
+    <div id="mdp">
         <label for="mdp">Mot de passe</label>
         <input type="password" name="pass" id="pass" />
     </div>
@@ -16,3 +16,6 @@
         <button type="submit">Se connecter</button>
     </div>
 </form>
+
+
+<script src="../app.js"></script>
